--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ google-auth = "^2.33.0"
 google-auth-oauthlib = "^1.2.1"
 google-auth-httplib2 = "^0.2.0"
 google-api-python-client = "^2.140.0"
+pydantic = "^2.9.2"
+requests = "^2.32.3"
+pyyaml = "^6.0.2"
 
 
 [build-system]
