--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -7,10 +7,11 @@ on:
   schedule:
     - cron: '0 2 * * *'
   workflow_dispatch:
-    google_photos_date:
-      description: 'Date to filter Google Photos (yyyy-mm-dd). If unset, yesterday will be used.'
-      required: false
-      default: ''
+    inputs:
+      google_photos_date:
+        description: 'Date to filter Google Photos (yyyy-mm-dd). If unset, yesterday will be used.'
+        required: false
+        default: ''
 
 jobs:
   run:
