--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -39,3 +39,4 @@ jobs:
         run: poetry run python main.py
         env:
           GOOGLE_PHOTOS_DATE: ${{ github.event.inputs.google_photos_date }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
