--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -4,8 +4,8 @@ on:
 #  push:
 #    branches:
 #      - main
-  schedule:
-    - cron: '0 2 * * *'
+#  schedule:
+#    - cron: '0 2 * * *'
   workflow_dispatch:
     inputs:
       google_photos_date:
